fix processing service
